--- a/mydrtv/angular.json
+++ b/mydrtv/angular.json
@@ -27,8 +27,9 @@
               "src/assets"
             ],
             "styles": [
-              "../node_modules/videogular2/fonts/videogular.css",
-              "src/styles.scss"
+              //"../node_modules/videogular2/fonts/videogular.css",
+              "src/styles.scss",
+              "node_modules/videogular2/fonts/videogular.css"
             ],
             "scripts": [],
             "es5BrowserSupport": true
