--- a/mydrtv/angular.json
+++ b/mydrtv/angular.json
@@ -29,6 +29,7 @@
             "styles": [
               //"../node_modules/videogular2/fonts/videogular.css",
               "src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/videogular2/fonts/videogular.css"
             ],
             "scripts": [],
