--- a/mydrtv/package.json
+++ b/mydrtv/package.json
@@ -22,6 +22,7 @@
     "@ngrx/store": "^7.4.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.4.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "videogular2": "^6.4.0",
