--- a/mydrtv/angular.json
+++ b/mydrtv/angular.json
@@ -30,7 +30,8 @@
               //"../node_modules/videogular2/fonts/videogular.css",
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/videogular2/fonts/videogular.css"
+              "node_modules/videogular2/fonts/videogular.css",
+              "node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
