--- a/mydrtv/package.json
+++ b/mydrtv/package.json
@@ -28,6 +28,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "rxjs": "~6.3.3",
+    "tassign": "^1.0.0",
     "tslib": "^1.9.0",
     "videogular2": "^6.4.0",
     "zone.js": "~0.8.26"
@@ -42,6 +43,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "deep-freeze": "0.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
